<resources>
    <string name="app_name">Aslan du Grand Lyon</string>

    <string name="server_url">https://aslan-grandlyon.herokuapp.com</string>
    <string name="server_sign_in">/aslan-messenger/signin</string>
    <string name="server_register">/aslan-messenger/register</string>
    <string name="server_message">/aslan-messenger/message</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>

    <string name="language">Langue :</string>
    <string name="french">Français</string>
    <string name="english">Anglais</string>
    <string name="does_aslan_speak">Aslan doit-il parler ?</string>

    <!--<string name="first_name">first name</string>-->
    <!--<string name="last_name">last name</string>-->
    <!--<string name="email_example">example@email.com</string>-->
    <!--<string name="username">username</string>-->
    <!--<string name="password">password</string>-->
    <!--<string name="confirm_password">confirm password</string>-->
    <!--<string name="register">Register</string>-->
    <!--<string name="sign_in">Sign In</string>-->
    <!--<string name="sign_out">Sign Out</string>-->
    <!--<string name="sign_out_in_progress">Sign Out...</string>-->
    <!--<string name="send_a_message">Send a message...</string>-->
    <!--<string name="connection_in_progress">Connection...</string>-->
    <!--<string name="please_enter_logins">Please enter logins...</string>-->
    <!--<string name="ckecks_logins">Impossible to connect, check logins...</string>-->
    <!--<string name="impossible_to_connect">Impossible to connect...</string>-->
    <!--<string name="email_already_exists">Impossible to register, this email is already used...</string>-->
    <!--<string name="error_impossible_to_register">An error occured, impossible to register...</string>-->
    <!--<string name="registration">Registration...</string>-->
    <!--<string name="all_inputs_have_to_be_filled_in">All inputs have to be filled in...</string>-->
    <!--<string name="password_are_not_similar">Password are not similar...</string>-->
    <!--<string name="error_when_sign_out">An error occured...</string>-->

    <string name="first_name">prénom</string>
    <string name="last_name">nom</string>
    <string name="email_example">exemple@email.fr</string>
    <string name="password">mot de passe</string>
    <string name="confirm_password">confirmer le mot de passe</string>
    <string name="register">S\'inscrire</string>
    <string name="sign_in">Se connecter</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="sign_out_in_progress">Déconnexion...</string>
    <string name="send_a_message">Envoyer un message...</string>
    <string name="connection_in_progress">Connexion...</string>
    <string name="registration_in_progress">Inscription...</string>
    <string name="please_enter_logins">Entrer un login...</string>
    <string name="ckecks_logins">Impossible de se connecter, vérifer le login...</string>
    <string name="impossible_to_connect">Impossible de se connecter...</string>
    <string name="email_already_exists">Impossible de s\'inscrire, cet email est déjà utilisé...</string>
    <string name="error_impossible_to_register">Erreur, impossible de s\'inscrire...</string>
    <string name="registration">Inscription...</string>
    <string name="all_inputs_have_to_be_filled_in">Tous les champs doivent être renseignés...</string>
    <string name="password_are_not_similar">Les mots de passes ne sont pas similaire...</string>
    <string name="error_when_sign_out">Erreur...</string>
    <string name="sorry_no_voice_input_supported">"Désolé, votre appareil ne supporte pas d'entrée vocale..."</string>
    <string name="you_can_speak">"Vous pouvez parler ..."</string>

    <string name="alsan_cant_answer">"Alsan ne peut pas répondre..."</string>

    <string name="location">Localisation</string>

    <string name="show_more">Afficher plus</string>
    <string name="show_less">Afficher moins</string>


</resources>
